增加eureka注册与服务模块、feign负载均衡模块、zuul网关路由、order订单模块，原demo增加账户余额模块；实现order订单模块提交时，调用demo账户余额模块修改余额功能

--- a/order/src/main/resources/application.properties
+++ b/order/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.application.name=service-demo
+spring.application.name=service-order
 #spring.data.mongodb.uri=mongodb://root:root@192.168.40.130:27017/test
 #spring.data.mongodb.uri=mongodb://192.168.40.130:27017/test
 spring.data.mongodb.uri=mongodb://114.67.225.112:27017/test
@@ -9,4 +9,4 @@ spring.thymeleaf.cache=false
 
 #×¢²áeureka·þÎñ
 eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka/
-server.port=8081
+server.port=8181
