增加springcloud的config服务；增加redis分布式锁，线程并发测试

--- a/demo/src/main/resources/application-dev.properties
+++ b/demo/src/main/resources/application-dev.properties
@@ -1,4 +1,4 @@
-spring.application.name=service-order
+spring.application.name=service-demo
 #spring.data.mongodb.uri=mongodb://root:root@192.168.40.130:27017/test
 #spring.data.mongodb.uri=mongodb://192.168.40.130:27017/test
 #spring.data.mongodb.uri=mongodb://114.67.225.112:27017/test
@@ -12,5 +12,6 @@ spring.thymeleaf.cache=false
 eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka/
 #eureka.client.serviceUrl.defaultZone=http://117.48.215.66:8761/eureka/
 #eureka.instance.prefer-ip-address=true
+#eureka.instance.ip-address=117.48.215.66
 #eureka.instance.instance-id=${spring.cloud.client.ipAddress}:${server.port}
-server.port=8181
+server.port=8081
