--- a/demo/src/main/resources/application.properties
+++ b/demo/src/main/resources/application.properties
@@ -1,7 +1,8 @@
 spring.application.name=service-demo
 #spring.data.mongodb.uri=mongodb://root:root@192.168.40.130:27017/test
 #spring.data.mongodb.uri=mongodb://192.168.40.130:27017/test
-spring.data.mongodb.uri=mongodb://114.67.225.112:27017/test
+#spring.data.mongodb.uri=mongodb://114.67.225.112:27017/test
+spring.data.mongodb.uri=mongodb://117.48.215.66:27017/test
 
 
 #关闭thymeleaf的缓存，不然在开发过程中修改页面不会立刻生效需要重启，生产可配置为true。
@@ -9,4 +10,24 @@ spring.thymeleaf.cache=false
 
 #注册eureka服务
 eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka/
+#eureka.client.serviceUrl.defaultZone=http://117.48.215.66:8761/eureka/
+#eureka.instance.prefer-ip-address=true
+#eureka.instance.ip-address=117.48.215.66
+#eureka.instance.instance-id=${spring.cloud.client.ipAddress}:${server.port}
 server.port=8081
+#server.port=8082
+#config客户端配置
+spring.cloud.config.label=master
+spring.cloud.config.profile=dev
+#spring.cloud.config.uri=http://localhost:8888/
+spring.cloud.config.discovery.enabled=true
+spring.cloud.config.discovery.serviceId=config-server
+#springboot 1.5.X 以上默认开通了安全认证，所以需要在配置文件application.properties添加以下配置，以post请求的方式来访问http://localhost:8081/refresh 就会更新修改后的配置文件
+management.security.enabled=false
+
+
+#rabbitmq
+spring.rabbitmq.host=117.48.215.66
+spring.rabbitmq.port=5672
+spring.rabbitmq.username=admin
+spring.rabbitmq.password=admin
