--- a/demo2/src/main/resources/application.properties
+++ b/demo2/src/main/resources/application.properties
@@ -1,6 +1,7 @@
 spring.application.name=service-demo
 #spring.data.mongodb.uri=mongodb://root:root@192.168.40.130:27017/test
-spring.data.mongodb.uri=mongodb://192.168.40.130:27017/test
+#spring.data.mongodb.uri=mongodb://192.168.40.130:27017/test
+spring.data.mongodb.uri=mongodb://117.48.215.66:27017/test
 
 
 #关闭thymeleaf的缓存，不然在开发过程中修改页面不会立刻生效需要重启，生产可配置为true。
@@ -8,4 +9,7 @@ spring.thymeleaf.cache=false
 
 #注册eureka服务
 eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka/
+#eureka.instance.prefer-ip-address=true
+#eureka.instance.ip-address=117.48.215.66
+#eureka.instance.instance-id=${spring.cloud.client.ipAddress}:${server.port}
 server.port=8082
