--- a/eureka-server/pom.xml
+++ b/eureka-server/pom.xml
@@ -7,6 +7,7 @@
 	<artifactId>eureka-server</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<packaging>jar</packaging>
+	<!--<packaging>war</packaging>-->
 
 	<name>eureka-server</name>
 	<description>Demo project for Spring Boot</description>
