--- a/service-zuul/src/main/resources/application.yml
+++ b/service-zuul/src/main/resources/application.yml
@@ -15,3 +15,9 @@ zuul:
     api-b:
       path: /api-b/**
       serviceId: service-feign
+    demo:
+      path: /demo/**
+      serviceId: service-demo
+    order:
+      path: /order/**
+      serviceId: service-order
